# depot-smart-boat

./: .gitignore  404.html  Cargo.toml  README.md  arch.html  book.toml  bt.html  index.html  mermaid-init.js  overview.html  print.html  release.html  searchindex.js  searchindex.json  sujet_ApplicationSystem.tex
.github/workflows/: gh-pages.yml  main.yml  smart-boat_debian.yml
assets/: sw.js
corps/: content.tex
package-builder/debian/: bd_smart-boat-gui_debian.sh  run_docker-img_debian.sh
package-builder/debian/docker/: Dockerfile  bd_docker-img_debian.sh
resources/: Ok-Bateau_fr_mac_v3_0_0.ppn  Ok-Bateau_fr_raspberry-pi_v3_0_0.ppn  smart-boat_fr_raspberry-pi_v3_0_0.rhn
ressources/: smart-boat_fr_mac_v3_0_0.rhn  smart-boat_fr_raspberry-pi_v3_0_0.rhn
sensor/: bme280.html  bmm150.html  hcsr05.html  mcp3008.html  pca9685.html
smart-boat-debian/smart-boat-debian-stub/DEBIAN/: control
smart-boat-debian/smart-boat-debian/DEBIAN/: control
smart-boat-macos.app/Contents/: Info.plist
src/: SUMMARY.md  arch.md  bt.md  chapter_1.md  main.rs  overview.md  release.md
src/boat_control/: bme280.rs  bmm150.rs  boat_controler.rs  boat_controler_itf.rs  boat_controler_stub.rs  girouette.rs  hcsr05.rs  mod.rs  pca9685.rs
src/boat_control/gpio_manager/: gpio_itf.rs  gpio_manager.rs  gpio_manager_stub.rs  mod.rs
src/code/: mod.rs  pca9685.rs
src/code/gpio_manager/: gpio_manager.rs  mod.rs
src/gpio_manager/: gpio_itf.rs  gpio_manager.rs  gpio_manager_stub.rs
src/gui/: gui.rs  menu.rs  mod.rs  side_panel.rs  tools.rs
src/gui/custom_widget/: circle_slider.rs  compass.rs  (+3 more)
src/model/: mod.rs  model.rs
src/msgq/: mod.rs  msgq.rs
src/picovoice_manager/: mod.rs  picovoice.rs
src/sensor/: bme280.md  bmm150.md  hcsr05.md  mcp3008.md  pca9685.md
src/voice_assistant/: mod.rs  voice_assistant.rs
(+11 files in other folders)
