[package]
name = "depot-smart-boat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui_extras = { version = "0.23", features = ["image"] }
hound = "3.5.1"
itertools = "0.11.0"
picovoice = "3.0.1"
rand = "0.8.5"
rppal = { version = "0.15.0", optional = true }
walkers = "0.13.0"

[features]
on_target = ["dep:rppal"]
