[package]
name = "depot-smart-boat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
ctrlc = "3.4.2"
eframe = "0.23.0"
egui_extras = { version = "0.23", features = ["image", "all_loaders"]}
egui_plot = "0.23.0"
ehttp = "0.3.1"
hound = "3.5.1"
itertools = "0.11.0"
picovoice = "3.0.1"
poll-promise = "0.3.0"
pv_recorder = "1.2.2"
rand = "0.8.5"
rppal = { version = "0.15.0", optional = true }
serde_json = "1.0.108"
walkers = "0.13.0"

[features]
on_target = ["dep:rppal"]
